lab6: an error in authorization has been fixed
